[package]
name = "delegation-kv-store"
version = "0.1.0"
authors = ["Jakob Eriksson <jakob@uic.edu> & Ben Baenen <bbaene2@uic.edu>"]
edition = "2021"

[features]
spinlock = []
mcslock = []
huge_pages = ["trust/huge_pages"]

[dependencies]
serde= "*"
synctools="*"
serde_closure="*"
bincode = "1.3.3"
zipf = "7.0.0"
core_affinity = "*"
libc = "0.2.65"
lazy_static = "1.4.0"
structopt = "0.2.15"
rand = { version = "0.8.5", features = ["small_rng"] }
spin = "*"
csv = "1.1.7"
num_cpus = "1.0"


[dependencies.trust]
path = "../../rust-delegation/trust"
version = "0.1.0"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions=true

[profile.release]
opt-level = 3
debug = true
lto = true

[[bin]]
name="server"
path="src/main.rs"
